ts jest monorepo

--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "issues-repros",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "repository": "git@github.com:Bnaya/issues-repros.git",
   "author": "Bnaya Peretz <bnaya@brandtotal.com>",
   "license": "MIT",
   "devDependencies": {
     "prettier": "^1.7.4"
-  }
+  },
+  "workspaces": [
+    "packages/**"
+  ]
 }
