--- a/package.json
+++ b/package.json
@@ -1,15 +1,39 @@
 {
   "name": "issues-repros",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
-  "private": true,
-  "repository": "git@github.com:Bnaya/issues-repros.git",
-  "author": "Bnaya Peretz <bnaya@brandtotal.com>",
   "license": "MIT",
-  "devDependencies": {
-    "prettier": "^1.7.4"
+  "dependencies": {
+    "@types/jest": "^21.1.3",
+    "jest": "^21.2.1",
+    "typescript": "^2.5.3"
   },
-  "workspaces": [
-    "packages/**"
-  ]
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}"
+    ],
+    "coverageReporters": [
+      "html",
+      "lcov"
+    ],
+    "mapCoverage": true
+  },
+  "devDependencies": {
+    "ts-jest": "^21.1.3"
+  }
 }
