--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "author": "Bnaya Peretz <bnaya@brandtotal.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "^10.1.2",
+    "prettier": "^1.7.4",
+    "source-map-support": "^0.5.6",
+    "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "mkdirp": "^0.5.1"
   }
 }
